--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                <div class="track-artist">Track Artist</div>
            </div>
 
-           <div class="slider-container">
+           <div class="slider_container">
                <div class="current-time">00:00</div>
-                <input type="range" min="1" max="100" value="0" class="seek-slider" onchange="seekTo()">
+                <input type="range" min="1" max="100" value="0" class="seek_slider" onchange="seekTo()">
                 <div class="total-duration">00:00</div>
            </div>
 
-           <div class="slider-container">
+           <div class="slider_container">
                <i class="fa fa-volume-down"></i>
-                <input type="range" min="1" max="100" value="99" class="volume-slider" onchange="setVolume()">
+                <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
                 <i class="fa fa-volume-up"></i>
            </div>
 
